src/CoronaResult.css
.CoronaResult {
    text-align: left;
    background-color: #6bbaec;
    min-height: 58vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: calc(5px + 2vmin);
    color:whitesmoke;
    border-radius: 2px solid red;
  }
  
  #coronaresultdisplay {
    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
    border-collapse: collapse;
    width: 100%;
    padding-top: 2px;
    margin-top: 2px;
  }
  
  #coronaresultdisplay td, #coronaresultdisplay th {
    border: 1px solid #ddd;
    padding: 8px;
  }
  
  #coronaresultdisplay tr:nth-child(even){background-color: #6bbaec;}
  
  #coronaresultdisplay tr:hover {background-color: #ddd;}
  
  #coronaresultdisplay th {
    padding-top: 12px;
    padding-bottom: 12px;
    text-align: left;
    background-color: #4CAF50;
    color: white;
  }
  
   
  

